# Abraxas

./: .env.example  .gitignore  AGENTS.md  LICENSE  README.md  bot.py  pyproject.toml  telegram_bot.py  test_bot.py  test_execution_protocol.py  test_telegram_bot.py  test_telegram_formatter.py  test_trigger_cli.py
docs/plans/: 2026-03-08-runtime-sync-from-abraxasdaily.md
ops/systemd/: abraxas-telegram.service
src/: cli.py  dotenv_config.py  telegram_bot.py  tools.py
src/capabilities/: __init__.py  main_model.py  runtime_auth.py  scheduler.py  trigger.py
src/channel/: __init__.py  cli.py  telegram.py  telegram_client.py  telegram_formatter.py  telegram_handlers.py  telegram_runner.py  telegram_scheduler.py  trigger_cli.py
src/core/: NOUS.md  __init__.py  bot.py  bot_hitl.py  commands.py  commands_hitl.py  memory.py  nous.py  rci_state.py  registry.py  scheduler.py  session_context.py  settings.py  skills.py  tape.py  tool_protocol.py  tools.py
src/memory/: MEMORY.md  README.md  braindump.md  mission-log.md
src/memory/daily/: 2026-02-24.md
src/plugins/: __init__.py  brave_search.py  nano_banana_image.py  telegram_config.py  telegram_file.py  tmux_manager.py  write.py
src/skills/: README.md  nano-banana-pro-photo.md  plugin-creator.md  skill-creator.md  skill-installer.md  skills-first.md
src/skills/external-agent/: README.md
src/skills/external-agent/external-agent-bootstrap/: SKILL.md
src/skills/external-agent/external-agent-deep-research/: SKILL.md
src/skills/external-agent/external-agent-project-files/: SKILL.md
(+11 files in other folders)
